메인 작업 - 박스오피스

--- a/src/main/webapp/sjmovie/src/assets/css/layout/header.scss
+++ b/src/main/webapp/sjmovie/src/assets/css/layout/header.scss
@@ -3,6 +3,7 @@ header {
   background-image: linear-gradient(to right, #222831, #393E46);
   opacity: 1;
   width: 100%;
+  z-index: 100;
 
   .header-inner {
     padding: 0 10px;
