--- a/src/main/webapp/sjmovie/src/assets/css/sign.scss
+++ b/src/main/webapp/sjmovie/src/assets/css/sign.scss
@@ -18,12 +18,12 @@
   }
 
   .wrap {
+    height: 475px;
     color: white;
     position: absolute;
-    top: 50%;
-    left: 100px;
+    top: 20%;
+    left: 120px;
     width: 300px;
-    transform: translateY(-50%);
 
     .tabs {
       margin-bottom: 20px;
@@ -34,7 +34,7 @@
         font-size: 16px;
         font-weight: bold;
         border-bottom: 1px solid white;
-        
+
         &.Mui-selected {
           color: #1976d2;
         }
