--- a/src/main/webapp/sjmovie/src/components/sign/signin.scss
+++ b/src/main/webapp/sjmovie/src/components/sign/signin.scss
@@ -1,4 +1,31 @@
 .sign-container .wrap {
+
+  .password-input {
+    input {
+      color: white;
+    }
+
+    width: 100%;
+    height: 48px;
+    margin: 0 0 20px 0;
+
+    label {
+      color: white;
+
+      &.Mui-focused {
+        color: dodgerblue;
+      }
+    }
+
+    div::before {
+      border-color: white;
+    }
+
+    path {
+      color: white;
+    }
+  }
+
   .login-input {
     width: 100%;
     margin: 0 0 10px;
@@ -51,6 +78,7 @@
   }
 
   .kakao-login-btn {
+    margin-top: 98px;
     background-color: #FEE500;
   }
 
