--- a/src/main/webapp/sjmovie/src/components/sign/signup.scss
+++ b/src/main/webapp/sjmovie/src/components/sign/signup.scss
@@ -1,4 +1,8 @@
 #sign-up-form {
+  & > div:nth-child(4) {
+    margin-bottom: 30px
+  }
+
   & > div {
     width: 100%;
     height: 48px;
@@ -23,5 +27,12 @@
 
   .date-picker button {
     padding-right: 17px;
+  }
+
+  .sign-up-btn {
+    margin-top: 30px;
+    width: 100%;
+    color: white;
+    border: 2px solid dodgerblue;
   }
 }
